<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_app_info">AppInfoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pedometer">PedometerActivity</string>
    <string name="title_activity_heart_rate">HeartRateActivity</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_sleep">SleepActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_device_search_device">DeviceSearchDeviceActivity</string>
    <string name="title_activity_device_bind_other">DeviceBindOtherActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_activity_data_manager">DataManagerActivity</string>
    <string name="title_activity_spalish">SpalishActivity</string>
    <string name="title_activity_pedometer_setting_target">PedometerSettingTargetActivity</string>
    <string name="title_activity_pedometer_height">PedometerHeightActivity</string>
    <string name="title_activity_pedometer_weight">PedometerWeightActivity</string>
    <string name="title_activity_pedometer_setting_gender">PedometerSettingGenderActivity</string>
    <string name="title_activity_pedometer_setting_age">PedometerSettingAgeActivity</string>
    <string name="title_activity_sleep_setting_start_time">SleepSettingStartTimeActivity</string>
    <string name="title_activity_sleep_setting_end_time">SleepSettingEndTimeActivity</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_weather_city_set">WeatherCitySetActivity</string>
    <string name="title_activity_weather_temp_unit_set">WeatherTempUnitSetActivity</string>
    <!-- 上面不用改 -->

    <string name="no_device_binding">No device binding</string>
    <string name="contact_binding">Release bound?</string>
    <string name="confirm">Confirm</string>
    <string name="preious">"&lt;&lt; "</string>
    <string name="next">" >>"</string>
    <string name="connected_watch">BOUND DEVICE</string>
    <string name="device_none">BOUND DEVICE</string>
    <string name="app_name">My Watch</string>
    <string name="clock">CLOCK</string>
    <string name="save">Save</string>
    <string name="data_manager">DATA MANAGER</string>
    <string name="more">MORE</string>
    <string name="sync_all_data">Synchronize all data</string>
    <string name="clear_all_data">Clear data</string>
    <string name="device">DEVICE</string>
    <string name="connection">CONNECTION</string>
    <string name="available_device_nearby">AVAILABLE DEVICE NEARBY</string>
    <string name="disconnected">Disconnected</string>
    <string name="search_device">Search device</string>
    <string name="bind_other_device">Bind other device</string>
    <string name="disconnect_reminded">Disconnect Reminded</string>
    <string name="heart_rate">HEART RATE</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="pedometer">PEDOMETER</string>
    <string name="sleep">SLEEP</string>
    <string name="steps">STEPS</string>
    <string name="hours">HOURS</string>
    <string name="hours_short">:</string>
    <string name="min_short"></string>
    <string name="bmp">BPM</string>
    <string name="rssi">RSSI</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="weather">WEATHER</string>
    <string name="camera">CAMERA</string>
    <string name="call_reminder">Call Reminder</string>
    <string name="music">Music</string>
    <string name="watch_time_sync">Watch Time Sync</string>
    <string name="shutdown_watch">Shutdown Watch</string>
    <string name="about">About</string>
    <string name="age">AGE</string>
    <string name="_0_200">Set range 0~200</string>
    <string name="height">HEIGHT</string>
    <string name="_0_300">Set range 0~300</string>
    <string name="target">TARGET</string>
    <string name="_500_100000">Set range 500~100000</string>
    <string name="weight">WEIGHT</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="city">CITY</string>
    <string name="_write_city_name">Enter the city name</string>
    <string name="available_city_0">AVAILABLE CITY :</string>
    <string name="search">SEARCH</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="select_type">SELECT TYPE</string>
    <string name="_setting_city">Set city</string>
    <string name="update_date">UPDATE DATE</string>
    <string name="_max_hr">Max HR</string>
    <string name="_min_hr">Min HR</string>
    <string name="_240">Max 240</string>
    <string name="_40">Min 40</string>
    <string name="current_hr">Current HR</string>
    <string name="avg_hr"> Average</string>
    <string name="step_total">STEP TOTAL</string>
    <string name="total_distance">TOTAL DISTANCE</string>
    <string name="total_calorie">TOTAL CALORIE</string>
    <string name="complete">complete</string>
    <string name="calorie">CALORIE</string>
    <string name="distance">DISTANCE</string>
    <string name="time">TIME</string>
    <string name="gender">Gender</string>
    <string name="sleep_total">SLEEP TOTAL</string>
    <string name="sleep_avg">SLEEP AVG</string>
    <string name="awake_time">AWAKE TIME</string>
    <string name="deep_sleep">DEEP SLEEP</string>
    <string name="light_sleep">LIGHT SLEEP</string>
    <string name="cancel">Cancel</string>
    <string name="min">Min</string>
    <string name="device_is_not_connected">No connection to the ring</string>
    <string name="is_deleteing">Is deleting</string>
    <string name="is_setting">In settings</string>
    <string name="no_binding">No binding</string>
    <string name="is_connected">Binding</string>
    <string name="is_connecting">Matching</string>
    <string name="binded">Binded</string>
    <string name="connect_closing">Connect down</string>
    <string name="enable_blue">Turn on Bluetooth?</string>
    <string name="open">Open</string>

    <!-- 天气 -->
    <string name="weather_20">Tornado</string>
    <string name="weather_16">Tropical storm</string>
    <string name="weather_19">Hurricane</string>
    <string name="weather_22">Severe thunderstorm</string>
    <string name="weather_21">Thunderstorm</string>
    <string name="weather_11">Rain and snow</string>
    <string name="weather_14">Sleet</string>
    <string name="weather_04">Light rain</string>
    <string name="weather_06">Freezing rain</string>
    <string name="weather_07">The shower</string>
    <string name="weather_08">Slight snow</string>
    <string name="weather_61">Flurries</string>
    <string name="weather_10">Blowing snow</string>
    <string name="weather_09">Snow</string>
    <string name="weather_13">Hail</string>
    <string name="weather_15">Dust</string>
    <string name="weather_12">Fog</string>
    <string name="weather_62">Mist</string>
    <string name="weather_63">Smoke</string>
    <string name="weather_64">Fierce wind</string>
    <string name="weather_65">Wind</string>
    <string name="weather_66">Cold </string>
    <string name="weather_02">Cloudy</string>
    <string name="weather_01">Sunny</string>
    <string name="weather_03">Local cloudy</string>
    <string name="weather_73">Hot</string>
    <string name="weather_74">Thunder shower</string>
    <string name="weather_75">Heavy snow</string>
    <string name="weather_76">Snow shower</string>
    <string name="weather_77">Rain shower and Snow</string>
    <string name="weather_00">UnKown</string>
    <string name="completion_rate">Completion rate :</string>
    <string name="kcal">KCAL</string>
    <string name="km">KM</string>
    <string name="today">today,</string>
    <string name="sync_all_ing">Syncing</string>
    <string name="_cm">CM</string>
    <string name="kg">KG</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="in_searching">Ready to find</string>
    <string name="in_weathering">Loading weather</string>
    <string name="in_citying">Searching City</string>
    <string name="loading">Loading</string>
    <string name="choose_sex">Select gender</string>
    <string name="setting_wrong">Set error</string>
    <string name="in_conntecting">Connectioning</string>
    <string name="close_">Close ?</string>
    <string name="Exit">Shut down</string>
    <string name="app_version_info">App Version:</string>
    <string name="positive">Confirm</string>
    <string name="find_phone">Find the phone</string>
    <string name="stop_searching">Stop searching...</string>
    <string name="hr_history_time">Time</string>
    <string name="positive_to_delete">Determine delete records?</string>
    <string name="index">No.</string>
    <string name="exit_app">Quits App ?</string>

    <string name="lanuage">en</string>

    <string name="user_manual">User Manual</string>

    <string name="share">Share</string>

</resources>