<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
	

  	    
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1px"
        android:layout_marginTop="24dp"
        android:background="@color/alertdialog_line" />

    <RelativeLayout
        android:id="@+id/rl_max_hr"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/img_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:src="@drawable/ic_more_shutdown"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/img_height"
            android:gravity="center_vertical"
            android:text="@string/_max_hr"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.mycj.mywatch.view.CleanEditText
            android:gravity="center"
            android:inputType="number"
              android:id="@+id/et_max_hr"
            android:layout_width="100dp"
            android:hint="@string/_240"
                        android:ems="4"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:layout_alignParentRight="true"
            android:text="00"
            android:textColor="@color/black_device"
            android:textSize="14sp" />
        
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1px"
        android:layout_marginLeft="12dp"
        android:background="@color/alertdialog_line" />
    <RelativeLayout
        android:id="@+id/rl_min_hr"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingBottom="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/img_min_hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:src="@drawable/ic_more_shutdown"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_min_hr"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/img_min_hr"
            android:gravity="center_vertical"
            android:text="@string/_min_hr"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.mycj.mywatch.view.CleanEditText
                        android:inputType="number"
                        android:hint="@string/_40"
            android:id="@+id/et_min_hr"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:ems="4"
            android:layout_alignParentRight="true"
          android:gravity="center"
            android:text="00"
            android:textColor="@color/black_device"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1px"
        android:background="@color/alertdialog_line" />
    
         <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/selector_home_bg"
            android:clickable="true"
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:text="@string/save"
            android:textSize="14sp" />

</LinearLayout>