<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color_top_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/connection"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_device"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_back_bg"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:clickable="false"
                android:src="@drawable/ic_action_previous_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_back"
                android:clickable="false"
                android:text="@string/device"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="44dp"
            android:text="@string/available_device_nearby"
            android:textColor="@color/black_device"
            android:textSize="18sp" />

        <ImageView
            android:clickable="true"
            android:id="@+id/ic_loading"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_loading" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/alertdialog_line" />

    <ListView
        android:id="@+id/lv_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1px" >
    </ListView>

</LinearLayout>