<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:background="@color/color_top_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="22sp"
                   android:clickable="false"
            android:textStyle="bold" />

        <RelativeLayout
        android:id="@+id/rl_device"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_home_bg"
            android:clickable="true" >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:clickable="false"
                android:src="@drawable/ic_action_previous_item" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_back"
                android:text="@string/device"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_search_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_signal_0" />

            <TextView
                android:id="@+id/tv_search_rssi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="--"
                android:textColor="@color/grey"
                android:textSize="12sp" />
        </LinearLayout>



        <TextView
            android:id="@+id/tv_search_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="@string/disconnected"
            android:textColor="#f00"
            android:textSize="18sp" />
    </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grey" >
        </View>
    <com.mycj.mywatch.view.RadarView
        android:layout_marginTop="20dp"
        android:id="@+id/radar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    </com.mycj.mywatch.view.RadarView>

</LinearLayout>